--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
     <title>Learning React with Mosh</title>
   </head>
   <body>
-    <div id="id"></div>
+    <div id="root"></div>
   </body>
 </html>
